[package]
name = "pallet-network"
description = "FRAME pallet template for defining custom runtime logic. (polkadot v1.15.0)"
version = "4.0.0-dev"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
strum = { version = "0.26.3", features = ["derive"], default-features = false }
strum_macros = { version = "0.26.3", default-features = false }
pallet-balances.workspace = true
log.workspace = true
pallet-insecure-randomness-collective-flip.workspace = true
sp-std.workspace = true
sp-core = { features = ["serde"], workspace = true }
sp-runtime = { workspace = true }
libm.workspace = true
pallet-collective = { version = "37.0.0", default-features = false, path = "../collective" }
pallet-treasury.workspace = true
fp-account = { workspace = true, features = ["serde"] }
pallet-evm.workspace = true
bs58.workspace = true

[dev-dependencies]
sp-io = { default-features = true, workspace = true }
env_logger = "0.10"
pallet-tx-pause.workspace = true

[features]
default = ["std"]
std = [
	"bs58/std",
	"codec/std",
	"fp-account/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-evm/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-treasury/std",
	"pallet-tx-pause/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
]
